fix display block align in output.css line 399

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -396,7 +396,7 @@ embed,
 object {
   display: block;
   /* 1 */
-  vertical-align: middle;
+  align-items: middle;
   /* 2 */
 }
 
